<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".get_started_screen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/logo" />

    <TextView
        style="@style/TEXT"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/system_name"
        android:textSize="30sp" />

    <TextView
        style="@style/TEXT"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/developers" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/watmonprofile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_below="@id/textView2"
        android:layout_marginTop="20dp"
        android:src="@mipmap/watmon"
        android:layout_marginStart="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/shakira"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@mipmap/shakira" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/watmonprofile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/watmon"
        style="@style/TEXT"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shakira"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/shakira"
        style="@style/TEXT"
        android:textSize="20sp" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/get_started"
        android:textSize="20sp" />

</RelativeLayout>