<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:background="@mipmap/backgroun1"
    tools:context=".login_screen">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        style="@style/TOPCURVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ROUNDCURVEBACKGROUND"
        android:padding="15dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            style="@style/TEXT"
            android:id="@+id/username"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="5dp"
            android:autofillHints="username"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textSize="20sp"
            style="@style/TEXT"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="resetPwd"
                android:text="@string/reset"
                style="@style/TEXT"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/spiinerItems"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:textSize="20sp"
            android:text="@string/loginBtn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>