<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".reset_password">

    <LinearLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        style="@style/TOPCURVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/resetHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ROUNDCURVEBACKGROUND"
        app:layout_constraintTop_toBottomOf="@id/resetLayout"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:layout_constraintVertical_bias="0.18">

        <EditText
            style="@style/TEXT"
            android:id="@+id/emailField"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:drawableStart="@drawable/baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="@string/email" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:text="@string/reset" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>