<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:orientation="vertical"
    tools:context=".editProfile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editProfile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TOOLBAR"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/below_toolbar"
                android:layout_width="match_parent"
                android:orientation="vertical"
                style="@style/TOPCURVE"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:src="@mipmap/student"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/pickImageIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="pickImage"
                        android:src="@drawable/camera"
                        app:layout_constraintBottom_toBottomOf="@id/profile"
                        app:layout_constraintEnd_toEndOf="@id/profile"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@id/profile"
                        app:layout_constraintTop_toTopOf="@id/profile"
                        app:layout_constraintVertical_bias="0.921" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/below_toolbar"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                style="@style/ROUNDCURVEBACKGROUND"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_username"
                    style="@style/TEXT"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="5dp"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/edit_firstname"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    style="@style/TEXT"
                    android:drawableStart="@drawable/baseline_person_outline_24"
                    android:drawablePadding="5dp"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/edit_lastname"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:drawableStart="@drawable/baseline_person_outline_24"
                    android:drawablePadding="5dp"
                    android:textSize="20sp"
                    android:inputType="text"
                    style="@style/TEXT"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    style="@style/TEXT"
                    android:drawableStart="@drawable/baseline_mail_outline_24"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/edit_contact"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="Contact"
                    style="@style/TEXT"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:inputType="text"
                    android:drawableStart="@drawable/phone_contact"
                    android:drawablePadding="5dp" />
                <Button
                    android:id="@+id/editProfileSaveChanges"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saveChanges"
                    android:textSize="20sp"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>